fix: grid on small screens

--- a/src/components/template-modal/style.scss
+++ b/src/components/template-modal/style.scss
@@ -44,11 +44,14 @@
 	}
 
 	&__content {
-		display: grid;
-		gap: 0 24px;
-		grid-template-columns: 1fr 2fr;
-		grid-template-rows: 1fr;
 		height: calc( 100% - 24px - 60px );
+
+		@media only screen and ( min-width: 600px ) {
+			display: grid;
+			gap: 0 24px;
+			grid-template-columns: 1fr 2fr;
+			grid-template-rows: 1fr;
+		}
 
 		+ .is-primary {
 			position: absolute;
@@ -62,6 +65,7 @@
 		overflow-y: scroll;
 		padding: 3px;
 		margin: -3px;
+		max-height: calc( 100% + 6px );
 
 		.block-editor-patterns {
 			display: grid;
@@ -69,6 +73,14 @@
 			grid-template-columns: repeat( 2, 1fr );
 			grid-auto-rows: minmax( min-content, max-content );
 			padding: 0;
+
+			@media only screen and ( min-width: 600px ) {
+				grid-template-columns: 1fr;
+			}
+
+			@media only screen and ( min-width: 783px ) {
+				grid-template-columns: repeat( 2, 1fr );
+			}
 
 			&__item {
 				margin: 0;
@@ -92,10 +104,14 @@
 		align-items: center;
 		border: 1px solid $light-gray-500;
 		border-radius: 2px;
-		display: flex;
+		display: none;
 		justify-content: center;
 		overflow-y: scroll;
 		position: relative;
+
+		@media only screen and ( min-width: 600px ) {
+			display: flex;
+		}
 
 		.block-editor-block-preview {
 			&__container {
